# keyple-card-generic-cpp-lib

./: CMakeLists.txt  PUBLISHERS.yml  README.md  _config.yml  index.md  list_versions.md
2.0.2/: _apdu_request_adapter_8cpp.html  _apdu_request_adapter_8cpp_source.html  _apdu_request_adapter_8h.html  _apdu_request_adapter_8h__dep__incl.map  _apdu_request_adapter_8h_source.html  _card_request_adapter_8cpp.html  _card_request_adapter_8cpp_source.html  _card_request_adapter_8h.html  _card_request_adapter_8h__incl.map  _card_request_adapter_8h_source.html  _card_selector_adapter_8cpp.html  _card_selector_adapter_8cpp_source.html  _card_selector_adapter_8h.html  _card_selector_adapter_8h_source.html  _card_transaction_manager_8h.html  _card_transaction_manager_8h__dep__incl.md5  _card_transaction_manager_8h_source.html  _card_transaction_manager_adapter_8cpp.html  _card_transaction_manager_adapter_8cpp_source.html  _card_transaction_manager_adapter_8h.html  _card_transaction_manager_adapter_8h__dep__incl.md5  _card_transaction_manager_adapter_8h__incl.md5  _card_transaction_manager_adapter_8h_source.html  _generic_card_adapter_8cpp.html  _generic_card_adapter_8cpp__incl.md5  _generic_card_adapter_8cpp_source.html  _generic_card_adapter_8h.html  _generic_card_adapter_8h__dep__incl.map  _generic_card_adapter_8h__incl.map  _generic_card_adapter_8h_source.html  _generic_card_resource_profile_extension_adapter_8cpp.html  _generic_card_resource_profile_extension_adapter_8cpp__incl.map  _generic_card_resource_profile_extension_adapter_8cpp_source.html  _generic_card_resource_profile_extension_adapter_8h.html  _generic_card_resource_profile_extension_adapter_8h__dep__incl.md5  _generic_card_resource_profile_extension_adapter_8h_source.html  _generic_card_selection_8h.html  _generic_card_selection_8h__dep__incl.md5  _generic_card_selection_8h__incl.map  _generic_card_selection_8h_source.html  (+89 more)
2.0.3-SNAPSHOT/: _apdu_request_adapter_8cpp.html  _apdu_request_adapter_8cpp_source.html  _apdu_request_adapter_8h.html  _apdu_request_adapter_8h__dep__incl.md5  _apdu_request_adapter_8h__incl.map  _apdu_request_adapter_8h__incl.md5  _apdu_request_adapter_8h_source.html  _card_request_adapter_8cpp.html  _card_request_adapter_8cpp__incl.map  _card_request_adapter_8cpp_source.html  _card_request_adapter_8h.html  _card_request_adapter_8h__dep__incl.md5  _card_request_adapter_8h__incl.md5  _card_request_adapter_8h_source.html  _card_selector_adapter_8cpp.html  _card_selector_adapter_8cpp_source.html  _card_selector_adapter_8h.html  _card_selector_adapter_8h_source.html  _card_transaction_manager_8h.html  _card_transaction_manager_8h__incl.map  _card_transaction_manager_8h__incl.md5  _card_transaction_manager_8h_source.html  _card_transaction_manager_adapter_8cpp.html  _card_transaction_manager_adapter_8cpp__incl.map  _card_transaction_manager_adapter_8cpp_source.html  _card_transaction_manager_adapter_8h.html  _card_transaction_manager_adapter_8h_source.html  _generic_card_adapter_8cpp.html  _generic_card_adapter_8cpp_source.html  _generic_card_adapter_8h.html  _generic_card_adapter_8h__dep__incl.md5  _generic_card_adapter_8h_source.html  _generic_card_resource_profile_extension_adapter_8cpp.html  _generic_card_resource_profile_extension_adapter_8cpp__incl.md5  _generic_card_resource_profile_extension_adapter_8cpp_source.html  _generic_card_resource_profile_extension_adapter_8h.html  _generic_card_resource_profile_extension_adapter_8h__dep__incl.map  _generic_card_resource_profile_extension_adapter_8h__incl.map  _generic_card_resource_profile_extension_adapter_8h_source.html  _generic_card_selection_8h.html  (+80 more)
2.0.4-SNAPSHOT/: _apdu_request_adapter_8cpp.html  _apdu_request_adapter_8cpp__incl.map  _apdu_request_adapter_8cpp__incl.md5  _apdu_request_adapter_8cpp_source.html  _apdu_request_adapter_8h.html  _apdu_request_adapter_8h_source.html  _card_request_adapter_8cpp.html  _card_request_adapter_8cpp__incl.md5  _card_request_adapter_8cpp_source.html  _card_request_adapter_8h.html  _card_request_adapter_8h__dep__incl.map  _card_request_adapter_8h_source.html  _card_selector_adapter_8cpp.html  _card_selector_adapter_8cpp__incl.map  _card_selector_adapter_8cpp__incl.md5  _card_selector_adapter_8cpp_source.html  _card_selector_adapter_8h.html  _card_selector_adapter_8h__dep__incl.map  _card_selector_adapter_8h__dep__incl.md5  _card_selector_adapter_8h__incl.map  _card_selector_adapter_8h__incl.md5  _card_selector_adapter_8h_source.html  _card_transaction_manager_8h.html  _card_transaction_manager_8h__dep__incl.map  _card_transaction_manager_8h_source.html  _card_transaction_manager_adapter_8cpp.html  _card_transaction_manager_adapter_8cpp__incl.md5  _card_transaction_manager_adapter_8cpp_source.html  _card_transaction_manager_adapter_8h.html  _card_transaction_manager_adapter_8h__dep__incl.map  _card_transaction_manager_adapter_8h__incl.map  _card_transaction_manager_adapter_8h_source.html  _generic_card_adapter_8cpp.html  _generic_card_adapter_8cpp__incl.map  _generic_card_adapter_8cpp_source.html  _generic_card_adapter_8h.html  _generic_card_adapter_8h__incl.md5  _generic_card_adapter_8h_source.html  _generic_card_resource_profile_extension_adapter_8cpp.html  (+100 more)
src/main/: ApduRequestAdapter.cpp  ApduRequestAdapter.h  CMakeLists.txt  CardRequestAdapter.cpp  CardRequestAdapter.h  CardSelectorAdapter.cpp  CardSelectorAdapter.h  CardTransactionManager.h  CardTransactionManagerAdapter.cpp  CardTransactionManagerAdapter.h  GenericCardAdapter.cpp  GenericCardAdapter.h  GenericCardResourceProfileExtensionAdapter.cpp  GenericCardResourceProfileExtensionAdapter.h  GenericCardSelection.h  GenericCardSelectionAdapter.cpp  GenericCardSelectionAdapter.h  GenericCardSelectionRequestAdapter.cpp  GenericCardSelectionRequestAdapter.h  GenericExtensionService.cpp  GenericExtensionService.h  KeypleCardGenericExport.h  TransactionException.h
(+40 files in other folders)
